# dyn-slice

./: .gitignore  .ignore  Cargo.toml  README.md  bacon.toml  rust-toolchain.toml
.github/workflows/: rust.yml
compile_fail_tests/: lifetime_1.rs  lifetime_1.stderr  lifetime_2.rs  lifetime_2.stderr  lifetime_3.rs  lifetime_3.stderr  lifetime_4.rs  lifetime_4.stderr  lifetime_any.rs  lifetime_any.stderr  mut_lock_1.rs  mut_lock_1.stderr  mut_lock_2.rs  mut_lock_2.stderr  mut_lock_3.rs  mut_lock_3.stderr  mut_lock_4.rs  mut_lock_4.stderr  mut_lock_5.rs  mut_lock_5.stderr  mut_lock_6.rs  mut_lock_6.stderr  mut_lock_7.rs  mut_lock_7.stderr  mut_lock_8.rs  mut_lock_8.stderr
dyn-slice-macros/: Cargo.toml  README.md
dyn-slice-macros/lib/: declare_new_fns.rs  lib.rs  path_ext.rs
examples/: const_generics.rs  custom_generic_trait.rs  custom_trait.rs  debug.rs  display.rs  multiple_traits.rs  test.rs
lib/: compile_tests.rs  dyn_slice.rs  dyn_slice_methods.rs  dyn_slice_mut.rs  dyn_slice_trait.rs  iter.rs  iter_mut.rs  lib.rs  no_std_test.rs  standard.rs  utils.rs
lib/iter/: chunks.rs  chunks_mut.rs  iter.rs  iter_mut.rs  mod.rs  rchunks.rs  rchunks_mut.rs  windows.rs
src/: as_slice.rs  index.rs  lib.rs  standard.rs
src/iter/: iter.rs  iter_mut.rs  mod.rs  split.rs  split_mut.rs
