[package]
name = "dyn-slice"
version = "3.1.0"
authors = ["Tom Boddaert"]
edition = "2021"
description = "&dyn [Trait] implementation, inspired by a Reddit thread."
readme = "README.md"
homepage = "https://github.com/tomBoddaert/dyn-slice/"
repository = "https://github.com/tomBoddaert/dyn-slice/"
license = "MIT OR Apache-2.0"
keywords = ["dyn", "slice", "traits"]
categories = ["data-structures", "no-std"]

[lib]
name = "dyn_slice"
edition = "2021"
path = "lib/lib.rs"
crate-type = ["lib"]

[features]
default = ["std", "alloc"]
std = ["alloc"]
alloc = []

[dev-dependencies]
trybuild = { version = "1.0.82", features = ["diff"] }
